# aarnavpai.github.io

./: .gitignore  2024115013.html  Cargo.toml  flake.nix  index.html
.github/workflows/: rust.yml
scripts/: main.rs  q2.js  q3.js
src/: main.rs  theme.rs
styles/: colors.css  style.css
